assets/css/base.scss
/*============= RESETS =============*/

html {
  padding: env(safe=area-inset);
}

/*-- Prevent Horizontal Scrolling & Font Style --*/
html, body {
  overflow-x: hidden;
  font-family: 'Noto Serif SC', sans-serif, serif;
  box-sizing: border-box;
}

*, body, ul, li,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a, a:hover, a:focus, a:active {
  text-decoration: none;
  color: inherit;
}

